# LJMD_Project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile.sh  example_verification.sh  result_verification.sh  test_verification.sh
.github/workflows/: linux-build-and-test.yml
LJMD_serial/: CMakeLists.txt  compile.sh  optimizaiton_flags_options  test_output
LJMD_serial/examples/: Makefile  argon_108.xyz
LJMD_serial/include/: prototypes.h  structures.h
LJMD_serial/src/: CMakeLists.txt  energy.c  force.c  input.c  main.c  output.c  utilities.c  verlet.c
Morse_Potential/: fit_lj_morse.py  morse_details.md  plot_morse_lj.py
Report/: Report.md
examples/: Makefile  argon_108.xyz  makefile_morse.mk  makefile_mpi.mk
include/: prototypes.h  structures.h  utilities.h  variables.h
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  energy.c  force.c  force_morse.c  input.c  ljmd.c  main.c  output.c  utilities.c  verlet.c
src/src/: Makefile  cmake_install.cmake
src/tests/: Makefile  cmake_install.cmake
tests/: CMakeLists.txt  GTest.cmake  test_allocate_arrays.cpp  test_ekin.cpp  test_energy.cpp  test_force.cpp  test_force_3LawN.cpp  test_force_3LawN_more_opt.cpp  test_force_omp_simple.cpp  test_free_arrays.cpp  test_input.cpp  test_mpi.cpp  test_omp.cpp  test_output.cpp  test_pbc.cpp  test_utils.cpp  test_verlet.cpp  test_verlet_integration_detailed.cpp
